--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <header>
         <h1>Ejercicios del DOM</h1>
         <div class="nav">
-            <figure id="nav__menu">
+            <figure class="nav__menu">
                 <i class="fa-solid fa-bars" id="bars"></i>
+            </figure>
+            <figure class="nav__menu top top-hiden">
+                <a href="#Seccion 1"><i class="fa-solid fa-arrow-up" id="top"></i></a>
             </figure>
             <div class="nav__sct">
             </div>
