--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" themeDark>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" integrity="sha512-W/zrbCncQnky/EzL+/AYwTtosvrM+YG/V6piQLSe2HuKS6cmbw89kjYkp3tWFn1dkWV7L1ruvJyKbLz73Vlgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <script src="https://kit.fontawesome.com/10d3a6231f.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header>
+<body themeDark>
+    <header themeDark>
         <h1>Ejercicios del DOM</h1>
         <div class="nav">
             <figure class="nav__menu">
@@ -18,12 +18,13 @@
             <figure class="nav__menu top top-hiden">
                 <a href="#Seccion 1"><i class="fa-solid fa-arrow-up" id="top"></i></a>
             </figure>
+            <button class="nav__menu darkMode">🌕</button>
             <div class="nav__sct">
             </div>
         </div>
     </header>
     <div id="main">
     </div>
-<script type="module"  src="main.js"></script>
+    <script type="module"  src="main.js"></script>
 </body>
 </html>
