--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header themeDark>
         <h1>Ejercicios del DOM</h1>
         <div class="nav">
-            <figure class="nav__menu">
+            <figure class="nav__menu nav__menu--bars">
                 <i class="fa-solid fa-bars" id="bars"></i>
             </figure>
             <figure class="nav__menu top top-hiden">
